--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,9 +17,11 @@ composeBom = "2024.10.00"
 appcompat = "1.7.0"
 
 retrofit = "2.9.0"
+roomCompiler = "2.5.2"
 roomRuntime = "2.6.1"
 daggerHilt = "2.52"
 timber = "5.0.1"
+devTools = "2.0.21-1.0.27"
 
 lifecycleViewmodelAndroid = "2.8.6"
 lifecycleViewmodelAndroidVersion = "2.8.7"
@@ -37,6 +39,7 @@ androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", 
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-compiler-v252 = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
@@ -69,6 +72,7 @@ androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "l
 lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroidVersion" }
 
 [plugins]
+devtoolsKsp = {id = "com.google.devtools.ksp" ,version.ref = "devTools"}
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
